--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,7 +160,7 @@ services:
       RAILS_ENV: test
       OPENPROJECT_RAILS__RELATIVE__URL__ROOT: "${OPENPROJECT_RAILS__RELATIVE__URL__ROOT:-}"
       SELENIUM_GRID_URL: http://selenium-hub:4444/wd/hub
-      CAPYBARA_SERVER_PORT: 3000
+      #CAPYBARA_SERVER_PORT: 3000
       CAPYBARA_DYNAMIC_HOSTNAME: 0
       CAPYBARA_APP_HOSTNAME: ci
       OPENPROJECT_DISABLE_DEV_ASSET_PROXY: 1
@@ -178,10 +178,13 @@ services:
     depends_on:
       - selenium-hub
 
+  # https://vitobotta.com/2019/09/04/rails-parallel-system-tests-selenium-docker/
   selenium-hub:
     image: selenium/hub:latest
     container_name: selenium-hub
     hostname: selenium-hub
+    environment:
+      GRID_MAX_SESSION: 10
     depends_on:
       - chrome
       - firefox
@@ -197,13 +200,13 @@ services:
       - /dev/shm:/dev/shm
     networks:
       - testing
-    ports:
-      - 5900:5900
     environment:
       HUB_HOST: selenium-hub
       HUB_PORT: 4444
       SCREEN_WIDTH: 1920
       SCREEN_HEIGHT: 1080
+      NODE_MAX_INSTANCES: 5
+      NODE_MAX_SESSION: 5
 
   firefox:
     image: selenium/node-firefox-debug:latest
