--- a/docker/ci/Dockerfile
+++ b/docker/ci/Dockerfile
@@ -34,3 +34,21 @@ VOLUME [ "/usr/local/bundle", "/home/$USER/openproject", "/home/$USER/openprojec
 WORKDIR /home/$USER/openproject
 
 ENTRYPOINT [ "/usr/sbin/entrypoint.sh" ]
+
+EXPOSE 3000
+EXPOSE 3001
+EXPOSE 3002
+EXPOSE 3003
+EXPOSE 3004
+EXPOSE 3005
+EXPOSE 3006
+EXPOSE 3007
+EXPOSE 3008
+EXPOSE 3009
+EXPOSE 3010
+EXPOSE 3011
+EXPOSE 3012
+EXPOSE 3013
+EXPOSE 3014
+EXPOSE 3015
+EXPOSE 3016
