--- a/.pkgr.yml
+++ b/.pkgr.yml
@@ -10,6 +10,7 @@ targets:
       - unrtf
       - tesseract-ocr
       - catdoc
+      - imagemagick
   debian-10:
     <<: *debian9
   ubuntu-16.04:
